--- a/JS-2/index.html
+++ b/JS-2/index.html
@@ -11,12 +11,12 @@
 
     <h1>JAVASCRIPT CONCEPTS</h1>
     <script src="objects.js"></script>
-    <!-- <script src="arrays.js"></script>
-    <script src="arraymethods.js"></script>
-    <script src="stringifyandparse.js"></script> -->
-    <!-- You can create separate index file for each -->
-    <script src="promises-async.js"></script>
+    <script src="arrays.js"></script>
+    <script src="arraymethods.js"></script> 
+   <!--  <script src="promises-async.js"></script>
     <script src="errorhandling.js"></script>
+    <script src="stringifyandparse.js"></script>  -->
+     <!-- You can create separate index file for each -->
 
 </body>
 
